@startuml
class Greenhouse {
  - LDR ldr
  - DHT11Sensor dht
  - ServoActuator persianas
  - ServoActuator riego
  - MQTTClient mqtt
  - int currentLuxState
  - int currentTempState
  + monitorAndControl()
  + begin()
}

class Sensor {
  + readData() : float
  + getState() : int
}

class LDR extends Sensor {
  + readData() : float
  + getState() : int
}

class DHT11Sensor extends Sensor {
  + readData() : float
  + getState() : int
}

class Actuator {
  + activate() : void
  + deactivate() : void
}

class ServoActuator extends Actuator {
  + activate() : void
  + deactivate() : void
  + moveTo(pos: int) : void
}

class MQTTClient {
  + setCallback(cb: void(*)(int, int)) : void
  + connect(clientId: const char*) : bool
  + loop() : void
  + publishState(luxState: int, tempState: int) : void
}

Greenhouse --> LDR
Greenhouse --> DHT11Sensor
Greenhouse --> ServoActuator 
Greenhouse --> MQTTClient
@enduml